# CGALStraightSkeletonAndTriangulation

./: CMakeLists.txt  README.md  test.cpp
src/: CGALBridge.cpp  CGALBridge.h
